add refresh and logout